<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in" />
    <string name="sign_up" />
    <string name="email"> Email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup_redirect">Not yet registered? Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_user_login">Already a user? Login</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="category_image" />
</resources>